--- a/src/scenes/footer/index.css
+++ b/src/scenes/footer/index.css
@@ -1,15 +1,16 @@
 .footer {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 15px;
-  /* position: absolute; */
+  position: absolute;
   bottom: 0;
   width: 100%;
-  height: 60px;
-  line-height: 60px;
-  background-color: #e5edef;
+  height: 60px; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 15px;
+  box-shadow: 0 -2px 6px 0 rgba(189, 189, 189, 0.2);
 }
+
 .footer a:hover,
 .footer a {
   text-decoration: none;
@@ -25,9 +26,11 @@
   border-radius: 5px;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 500px) {
   .footer a,
   .footer a:hover {
     font-size: 12px;
+    line-height: 20px;
+    margin-top: 10px;
   }
 }
