--- a/src/scenes/notice/components/map.css
+++ b/src/scenes/notice/components/map.css
@@ -10,9 +10,9 @@
   width: 100%;
 }
 
-.map-container #map {
-  width: "100%";
-  height: "100%";
+#map {
+  width: 100%;
+  height: 100%;
 }
 
 .leaflet-container {
