--- a/src/scenes/museo/index.css
+++ b/src/scenes/museo/index.css
@@ -1,8 +1,18 @@
 .museo {
-  padding: 15px;
   margin: 50px auto;
   max-width: 800px;
+  padding: 30px 25px 30px 25px;
+  margin-bottom: 100px;
 }
+
+@media screen and (min-width: 800px) {
+  .museo {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px 1px rgba(189, 189, 189, 0.7);
+  }
+}
+
 .museo h1 {
   color: #025d59;
   font-size: 24px;
@@ -14,6 +24,5 @@
 }
 
 .museo-map {
-  margin-bottom: 25px;
   margin-top: 25px;
 }
